# IntegrateSimple

./: CMakeLists.txt  Integrate.pyi  main.cpp
example/: main.ipynb
